# beyond-blue

./: .gitignore  README.md
models/: README.md  pyproject.toml
models/api/: README.md  example_usage.py  main.py  start_api.py  test_api.py  test_model_loading.py
models/exo_classification/: new.ipynb
models/exo_classification/training/: train_1.ipynb
web/backend/: .gitignore  README.md  package-lock.json  package.json
web/backend/src/: index.ts
web/backend/src/db/: hi.ts
web/backend/src/models/: planet.ts
web/backend/src/services/: gemini.ts
web/backend/src/utils/: summarize.ts
web/frontend/: .gitignore  API_INTEGRATION.md  package.json  vitest.config.ts  vitest.setup.tsx
web/frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
web/frontend/src/app/__tests__/: page.test.tsx
web/frontend/src/app/about/: page.tsx
web/frontend/src/app/api/images/: route.ts
web/frontend/src/app/classify/: page.tsx
web/frontend/src/app/explore/: page.tsx
web/frontend/src/components/: classifier-form.tsx  cosmic-background.tsx  explore-client.tsx  filters-bar.tsx  footer.tsx  header.tsx  planet-card.tsx  planet-detail.tsx  planet-gallery.tsx  planet-row.tsx  planet-summary-header.tsx  serp-gallery.tsx  serp-image.tsx  surprise-me-button.tsx  theme-toggle.tsx
web/frontend/src/components/__tests__/: filters-bar.test.tsx  planet-card.test.tsx  planet-detail.test.tsx
web/frontend/src/components/primitives/: field.tsx  help-icon.tsx
web/frontend/src/components/ui/: button.tsx  cosmic-background.tsx  meteors.tsx
(+2 files in other folders)
